Fixed layout problems / carousel controls responsivity/ hover / Languages size / antialiasing

--- a/src/app/components/Footer/styles.sass
+++ b/src/app/components/Footer/styles.sass
@@ -7,7 +7,7 @@
             @include font-settings(GothamBlack, 1.2rem)
             line-height: 0
     .footer-languages
-        @include font-settings(GeomanistRegular, 1rem)
+        @include font-settings(GeomanistRegular, 1.2rem)
         @include colop(0.33)
         line-height: 0
         >span
