--- a/src/app/components/SpinningBtn/styles.sass
+++ b/src/app/components/SpinningBtn/styles.sass
@@ -13,7 +13,7 @@
     cursor: pointer
     text-align: center
     backface-visibility: hidden
-    
+    -webkit-tap-highlight-color: transparent
     >img
         display: block
         width: 40%
@@ -31,12 +31,13 @@
         @include transform(translate(-50%, -50%))
         @include font-settings (GeomanistBold, 1.5rem)
         color: $mateBlack
-    &:hover
-        .svgSpin
-            @include transform(scale(1.2))
     &:active
         .svgSpin
             @include transform(scale(.8))
+    @include for-desktop-up 
+        &:hover
+            .svgSpin
+                @include transform(scale(1.1))
 
 .spinWrapper
     width: 100%
