--- a/src/app/screens/about/styles.sass
+++ b/src/app/screens/about/styles.sass
@@ -10,7 +10,7 @@
         grid-template-areas: "description description" "design code" "cta cta"
         grid-template-columns: 1fr 1fr
         margin: 4.8rem 4.8rem
-    @include for-desktop-up
+    @include for-big-desktop-up 
         grid-template-areas: "description design" "cta code"
         grid-template-columns: 1fr 1.25fr
     .mainContent-description
@@ -18,7 +18,7 @@
         margin-bottom: 4.8rem
         h1
             @include font-settings (GeomanistBlack, 2rem)
-            @include for-desktop-up 
+            @include for-big-desktop-up 
             @include for-tablet-portrait-up 
                 @include font-settings (GeomanistBlack, 3rem)
         p
@@ -26,7 +26,7 @@
     .mainContent-cta
         grid-area: cta
         justify-self: center
-        @include for-desktop-up
+        @include for-big-desktop-up 
             align-self: center
             justify-self: stretch
             
@@ -37,7 +37,7 @@
         margin-bottom: 4.8rem
         @include for-tablet-portrait-up 
             place-self: center
-        @include for-desktop-up
+        @include for-big-desktop-up 
             display: flex
             align-items: center
             justify-self: end
@@ -59,7 +59,7 @@
                 line-height: 0.5
                 @include font-settings(GeomanistBlack, 5rem)
                 @include colop(0.1)
-            @include for-desktop-up
+            @include for-big-desktop-up 
                 margin-right: 7.2rem
     .mainContent-code
         grid-area: code
@@ -67,7 +67,7 @@
         margin-bottom: 4.8rem
         @include for-tablet-portrait-up 
             place-self: center
-        @include for-desktop-up
+        @include for-big-desktop-up 
             display: flex
             flex-direction: row-reverse
             align-items: center
@@ -75,7 +75,7 @@
             margin-bottom: 0
         img
             width: 18rem
-            @include for-desktop-up
+            @include for-big-desktop-up 
                 margin-right: 7.2rem
         p
             @include font-settings(GeomanistRegular, 1.2rem)
